--- a/src/dotNetComicBook/Views/ComicBooks/Detail.cshtml
+++ b/src/dotNetComicBook/Views/ComicBooks/Detail.cshtml
@@ -30,9 +30,19 @@
 
     <h5>Description:</h5>
     <h6>@Html.Raw(@description)</h6>
+    @if (artists.Length > 0)
+    {   
+         <h6>Artists:</h6>
+        <div>
+            <ul>
+                @foreach (var artist in artists)
+                {
+                    <li>@(artist + " ")</li>;
+                }
+            </ul>
+        </div>
+    }
 
-    <h6>Artists:</h6>
-    <h6>@artists</h6>
 
 </body>
 </html>
