--- a/src/dotNetComicBook/Views/ComicBooks/Detail.cshtml
+++ b/src/dotNetComicBook/Views/ComicBooks/Detail.cshtml
@@ -1,21 +1,23 @@
-﻿@{
+﻿@model dotNetComicBook.Models.ComicBook
+
+@{
     Layout = "~/Views/Shared/_Layout.cshtml";
-    ViewBag.Title = "Comic Book Detail";
+    ViewBag.Title = Model.DisplayText;
 }
 
-<h1>@ViewBag.SeriesTitle</h1>
-<h3>issue #@ViewBag.IssueNumber</h3>
+<h1>@Model.SeriesTitle</h1>
+<h3>issue #@Model.IssueNumber</h3>
 
 <h5>Description:</h5>
-<h6>@Html.Raw(@ViewBag.Description)</h6>
-@if (ViewBag.Artists.Length > 0)
+<h6>@Html.Raw(Model.DescriptionHtml)</h6>
+@if (Model.Artists.Length > 0)
 {   
     <h6>Artists:</h6>
     <div>
         <ul>
-            @foreach (var artist in ViewBag.Artists)
+            @foreach (var artist in Model.Artists)
             {
-                <li>@(artist + " ")</li>;
+                <li>@artist.Role: @artist.Name</li>
             }
         </ul>
     </div>
