updated view with new style

--- a/src/dotNetComicBook/Views/ComicBooks/Detail.cshtml
+++ b/src/dotNetComicBook/Views/ComicBooks/Detail.cshtml
@@ -5,7 +5,43 @@
     ViewBag.Title = Model.DisplayText;
 }
 
-<h1>@Model.SeriesTitle</h1>
+
+<h2>@Model.DisplayText</h2>
+
+<div class="row">
+    <div class="col-md-6">
+        <div class="well">
+            <h5><label>Series Title:</label> @Model.SeriesTitle</h5>
+            <h5><label>Issue #:</label> @Model.IssueNumber</h5>
+            <h5><label>Favorite:</label> @(Model.Favorite ? "Yes" : "No")</h5>
+            @if (Model.Artists.Length > 0)
+            {
+                <h5>Artists:</h5>
+                <div>
+                    <ul>
+                        @foreach (var artist in Model.Artists)
+                        {
+                            <li>@artist.Role: @artist.Name</li>
+                        }
+
+                    </ul>
+                </div>
+            }
+        </div>
+        <h5>Description</h5>
+        <h6>@Html.Raw(Model.DescriptionHtml)</h6>
+    </div>
+    <div class="col-md-6">
+        <img src="/Images/@Model.ConverImageFileName"
+             alt="@Model.DisplayText" class="img-responsive" />
+    </div>
+    <h2>@Model.ConverImageFileName</h2>
+</div>
+
+
+@*------!!!!!!!!!!_-------*@
+
+@*<h1>@Model.SeriesTitle</h1>
 <h3>issue #@Model.IssueNumber</h3>
 
 <h5>Description:</h5>
@@ -21,5 +57,5 @@
             }
         </ul>
     </div>
-}
+}*@
 
